Se crean las Credenciales en Facebook
Se han creado la aplicación en Facebook, esto es necesario para tener un control sobre las aplicaciones. Se has agregado las libreías a gradle y se han agregado el id a string, permisos  de internet al manifest y se ha includo una actividad de facebook, que ya viene incluida en el sdk.

--- a/24-Login-Facebook/app/src/main/res/values/strings.xml
+++ b/24-Login-Facebook/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">24-Login-Facebook</string>
+    <string name="facebook_app_id">120706591877161</string>
 </resources>
