Se crea la interfaz para el Login
Se ha creado la interfaz de en la acitividad del Login, y en el Main Activity para iniciar y cerrar sesión. La API de facebook tiene una clase llamada Profile, que obtiene el perfil actual de la sesión. Con esta, podemos obtener los datos como el id del usuario y los datos como nombres y apellidos. Además tiene dos widget útiles como el el botón llamado Login Button y ProfilePictureView que carga la imagen al pasarle el id de la sesión actual.

--- a/24-Login-Facebook/app/src/main/res/values/strings.xml
+++ b/24-Login-Facebook/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">24-Login-Facebook</string>
-    <string name="facebook_app_id">120706591877161</string>
+    <string name="facebook_app_id">841174942723145</string>
+    <string name="fb_login_protocol_scheme">fb841174942723145</string>
 </resources>
